[workspace]
members = ["core", "server", "load_test"]

[workspace.dependencies]
anyhow = "1.0.100"
crc32fast = "1.5.0"
tokio = { version = "1.48.0", features = ["full"]}
log = "0.4.29"
clap = { version = "4.5.53", features = ["derive"]}
env_logger = "0.11.8"
openraft = { version = "0.9", features = ["serde", "storage-v2"]}
actix-web = "4"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = { version = "1.0.57" }
tracing = "0.1.29"
reqwest = { version = "0.12.5", features = ["json"] }
sled = "0.34.7"
bytes = { version = "1", features = ["serde"]}
rand = "0.9.2"
dashmap = "6.1.0"
criterion = "0.8.1"
