[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
crc32fast.workspace = true
openraft.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
actix-web.workspace = true
reqwest.workspace = true
