[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
crc32fast.workspace = true
openraft.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
actix-web.workspace = true
reqwest.workspace = true
sled.workspace = true
bytes.workspace = true
rand.workspace = true
dashmap.workspace = true
log.workspace = true
env_logger.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "merge_bench"
harness = false

[[bench]]
name = "put_bench"
harness = false

[[bench]]
name = "get_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
